<resources>
    <string name="about_address">Teleca Poland Sp. z o.o.\n6 Kasprzaka Street\n90-083 Lodz, Poland</string>
    <string name="about_link">android@teleca.com</string>
    <string name="app_name">5.1汽车音乐</string>
    <string name="about_note">(c) ©2011-2015 5.1音乐网</string>
    <string name="popular_this_week">popular this week</string>
    <string name="player_name">Jamendo Player</string>
    <string name="settings">设置</string>
    <string name="about">About</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_small">playlist</string>
    <string name="player">Player</string>
    <string name="album_small">album</string>
    <string name="search">Search</string>
    <string name="albums">Albums</string>
    <string name="my_library">My Library</string>
    <string name="browse_jamendo">Browse Jamendo</string>
    <string name="discography">discography</string>
    <string name="remove">Remove</string>
    <string name="download">Download</string>
    <string name="delete">删除</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="neew">New</string>
    <string name="move">Move</string>
    <string name="added_to_playlist">Added to the playlist</string>
    <string name="favorites">Favorites</string>
    <string name="radio">Radio</string>
    <string name="playlists">Playlists</string>
    <string name="most_listened">Most listened</string>
    <string name="open">Open</string>
    <string name="review">Review</string>
    <string name="musics">Tracks</string>
    <string name="radio_hint">Radio id or name</string>
    <string name="search_hint">Jamendo Search</string>
    <string name="loading_news">Loading data...</string>
    <string name="loading">Loading...</string>
    <string name="add_to_favs">Added to favorites</string>
    <string name="top100_fail">Failed getting top 100 music :\'(</string>
    <string name="license">Album License</string>
    <string name="donate">Donate</string>
    <string name="all_languages">All languages</string>
    <string name="loading_top100">Loading most listened...</string>
    <string name="retry">Retry</string>
    <string name="connection_fail">Connection failed</string>
    <string name="add">Add</string>
    <string name="lyrics">Lyrics</string>
    <string name="no_lyrics">Lyrics unavailable</string>
    <string name="about_contact">Questions, bug reports or any feedback</string>
    <string name="about_teleca">About Developers</string>
    <string name="about_jamendo">About Jamendo</string>
    <string name="sd_card_insert">SD Card not mounted</string>
    <string name="added_down">Added to downloads...</string>
    <string name="download_album">Download</string>
    <string name="send">Send</string>
    <string name="phone_hint">Phone number</string>
    <string name="song_recommendation">Song recommendation</string>
    <string name="recommendation_sent">Recommendation sent</string>
    <string name="webpage">Web page</string>
    <string name="artist_fail">Failed getting artist data :\'(</string>
    <string name="artist_loading">Loading artist data...</string>
    <string name="adding_to_playlist">Adding album to playlist...</string>
    <string name="adding_to_playlist_fail">Failed adding album to playlist :\'(</string>
    <string name="album_fail">Failed getting album data :\'(</string>
    <string name="album_loading">Loading album data...</string>
    <string name="items">items</string>
    <string name="share">Share</string>
    <string name="searching">Searching...</string>
    <string name="search_fail">Search fail :\'(</string>
    <string name="no_results">No results found</string>
    <string name="search_list_hint">Type your search query above</string>
    <string name="no_playlists">Type playlist name above and click \'New\'</string>
    <string name="no_tracks">This playlist does not contains any musics yet</string>
    <string name="no_items">No items</string>
    <string name="apply">Apply</string>
    <string name="no_album">No Album</string>
    <string name="no_artist">No Artist</string>
    <string name="long_press_playlist">Long press to add to a playlist</string>
    <string name="overwrite_playlist_q">Overwrite playlist?</string>
    <string name="delete_playlist_q">Delete playlist?</string>
    <string name="download_track_q">Download music?</string>
    <string name="download_album_q">Download album?</string>
    <string name="ok">OK</string>
    <string name="terms_of_use">©2011-2015 5.1音乐网，为了发烧友而存在！</string>
    <string name="terms_button">Open Terms and Conditions of Use in the Browser</string>
    <string name="sms_fail">SMS fail :\'(</string>
    <string name="playlist_exists">Playlist already exists</string>
    <string name="credits">Credits</string>
    <string name="maintainers">Development team</string>
    <string name="contributors">Contributors</string>
    <string name="home">Home</string>
    <string name="loading_playlist">Loading playlist data...</string>
    <string name="loading_playlist_fail">Failed loading playlist data :\'(</string>
    <string name="stream_error">Unable to open stream for this music :\'(</string>
    <string name="loading_fail">Loading fail :\'(</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="starred_albums_empty">The list of your starred albums is empty. This functionality is read-only as currently Jamendo Web API does not support authentication. \n\nIn order to add an album to this list press \'love\' button while on the jamendo.com web site.</string>
    <string name="better_res">1.300.jpg</string>
    <string name="loading_recomended_radios">Loading recomended radios</string>
    <string name="failed_recomended_radios">Loading recomended radios failed</string>
    <string name="play">Play</string>
    <string name="gestures_preference_title">Gestures</string>
    <string name="gestures_preference_summary">Preferences related to gestures support</string>
    <string name="gestures_support">Gestures enabled</string>
    <string name="gestures_support_summary">Enables gestures support in Jamendo</string>
    <string name="scrobbler_app">Scrobbling application</string>
    <string name="scrobbler_lastfm_official">Last.FM Official scrobbler</string>
    <string name="scrobbler_simplefm">Simple Last.FM Scrobbler</string>
    <string name="scrobbling_enabled">Enable scrobbling?</string>
    <string name="scrobbler_app_summary">Choose scrobbling application</string>
    <string name="tutorial_welcome">This tutorial screen contains a few tips you might find useful so check it out!</string>
    <string name="tutorial_title">Welcome to Jamendo Player!</string>
    <string name="tutorial_gesture_next">Next song</string>
    <string name="tutorial_gesture_prev">Previous song</string>
    <string name="tutorial_gesture_playpause">Play/Pause song</string>
    <string name="tutorial_gesture_stop">Stop song</string>
    <string name="tutorial_gestures">Gestures:</string>
    <string name="tutorial_toggle_firstrun">Skip this next time</string>
    <string name="tutorial_shufflerepeat">Shuffle/Repeat:</string>
    <string name="tutorial_shufflerepeat_playlist">Touch album art to show all controls and also to reveal new shuffle/repeat toggle buttons</string>
    <string name="tutorial_close">Press [BACK] to close this screen</string>
    <string name="preference_reset_title">Reset settings</string>
    <string name="preference_firstrun_reset_title">Reset welcome screen</string>
    <string name="preference_firstrun_reset_summary">Show welcome screen on next program start</string>
    <string name="preference_username_title">User name</string>
    <string name="preference_username_summary">Personalize your Jamendo client</string>
    <string name="preference_codec_title">Download format</string>
    <string name="preference_codec_summary">Select your preferred codec</string>
    <string name="preference_cache_title">Cache option</string>
    <string name="preference_cache_summary">Select size for caching</string>
    <string name="preference_wifi_only_title">Wifi only mode</string>
    <string name="preference_wifi_only_summary">Listen only in wifi network area</string>
    <string name="preference_roaming_title">Roaming protection</string>
    <string name="preference_roaming_summary">Disable listening abroad</string>
    <string name="preference_3rdparty_title">3rd Party Applications</string>
    <string name="preference_3rdparty_summary">Interaction with outside applications</string>
    <string name="close">Close</string>
    <string name="equalizer">Equalizer</string>
    <string name="custom">Custom</string>
    <string name="user_gold_expired">金钻会员剩余%d天</string>
    <string name="nickname_prefix">%s</string>
    <string name="user_ordinary">普通会员</string>
    <string name="my_favor">我最爱</string>
    <string name="error_tips_no_select">大侠，要先选择歌曲哦</string>
    <string name="register">注册</string>
    <string name="registering">注册中</string>
    <string name="register_success">注册成功</string>
    <string name="tip">弱弱提醒一句</string>
    <string name="bind">绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_tips">大侠，绑定手机用手机号登录更方便哦</string>
    <string name="member_info">会员资料</string>
    <string name="phone">电话：</string>
    <string name="email">邮件：</string>
    <string name="level">等级：</string>
    <string name="vip_download_limited">只有金钻会员，才能下载哦……</string>
    <string name="userinfo_portrait_uploading">头像上传中</string>
    <string name="userinfo_portrait_upload_success">头像上传成功</string>
    <string name="userinfo_upload_loading">资料保存中...</string>
    <string name="userinfo_upload_success">资料保存成功</string>
    <string name="userinfo_modify_nickname">修改昵称</string>
    <string name="userinfo_modify_email">修改Email</string>
    <string name="userinfo_hint_nickname">输入您的昵称</string>
    <string name="userinfo_hint_email">输入您的EMAIL</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_btn">登陆</string>
    <string name="login_acc">帐号</string>
    <string name="login_pwd">密码</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="net_error">网络异常</string>
    <string name="net_error_tips">网络加载超时</string>
    <string name="currency_unit">￥%.2f</string>
    <string name="common_error_reload">重新加载</string>
    <string name="common_error_null">任务列表为空</string>
    <string name="common_error_loading">加载中......</string>
    <string name="common_cancel">取消</string>
    <string name="common_music_info_error">获取歌曲信息失败！</string>
    <string name="downloaded">下载完成</string>
    <string name="upgrade">升级</string>
    <string name="cancel">取消</string>
    <string name="common_tip">提示</string>
    <string name="search_failed">搜索失败!</string>
    <string name="login_forget">忘记密码?</string>
    <string name="register_free">免费注册</string>
    <string name="login_forget_click">点击找回</string>
    <string name="login_acc_empty">帐号不能为空</string>
    <string name="login_pwd_empty">密码不能为空</string>
    <string name="login_ing">登陆中...</string>
    <string name="change_title">修改密码</string>
    <string name="change_old">旧密码</string>
    <string name="change_new">新密码</string>
    <string name="change_renew">确认新密码</string>
    <string name="change_inconformity">两次密码输入不一致</string>
    <string name="change_pwd_length">密码长度应为6-12位</string>
    <string name="forget_phone">输入绑定手机号</string>
    <string name="forget_input_code">收到的验证码</string>
    <string name="forget_gain_code">获取验证码</string>
    <string name="forget_pwd">请设置新密码</string>
    <string name="setting_adjust">均衡器</string>
    <string name="setting_update_version">版本更新</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登陆</string>
</resources>