<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_bg1"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <TextView android:id="@+id/tv_setting_adjust"
        style="@style/common_setting_item"
        android:text="@string/setting_adjust" />

    <TextView android:id="@+id/tv_setting_update"
        style="@style/common_setting_item"
        android:text="@string/setting_update_version" />

    <TextView android:id="@+id/tv_setting_about"
        style="@style/common_setting_item"
        android:text="@string/setting_about" />

    <TextView android:id="@+id/tv_setting_exit"
        style="@style/common_setting_item"
        android:text="@string/setting_logout" />


</LinearLayout>