<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/forget_phone"
            android:textSize="12dp"
            android:maxLength="11"
            android:inputType="phone"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_gain_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginRight="24dp"
            android:textSize="@dimen/small_x"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:background="@color/green"
            android:text="@string/forget_gain_code" />
    </FrameLayout>


    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12dp"
        android:hint="@string/forget_input_code"
        android:singleLine="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/forget_pwd"
            android:inputType="textPassword"
            android:textSize="12dp"
            android:paddingRight="30dp"
            android:singleLine="true" />


        <ImageView
            android:id="@+id/iv_show_pwd"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="24dp"
            android:src="@drawable/icon_pwd_show" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/green_transparent_50"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_x" />
</LinearLayout>