<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="15dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改昵称"
            android:textColor="@color/green"
            android:textSize="@dimen/normal" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:maxLength="50"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:hint="@string/userinfo_hint_nickname"
            android:textColor="@color/font_black"
            android:textSize="@dimen/normal_s" />
    </LinearLayout>

    <View style="@style/DividerLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_white_press_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/common_cancel"
            android:textColor="@color/font_black"
            android:textSize="@dimen/normal" />
        <View android:id="@+id/v_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/divider_line"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_white_press_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/font_black"
            android:textSize="@dimen/normal" />
    </LinearLayout>

</LinearLayout>