<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/common_tip"
            android:textColor="@color/green"
            android:textSize="@dimen/normal" />


    </FrameLayout>

    <View style="@style/DividerLine"/>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="15dp"
        android:textColor="@color/font_black"
        android:textSize="@dimen/normal_s" />

    <View style="@style/DividerLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="@drawable/common_white_press_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/common_cancel"
            android:textColor="@color/font_black"
            android:textSize="@dimen/normal" />
        <View android:id="@+id/v_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/divider_line"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_white_press_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textColor="@color/font_black"
            android:textSize="@dimen/normal" />
    </LinearLayout>

</LinearLayout>