<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_logo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_loginname"/>

        <EditText android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@color/font_blue"
            android:textSize="@dimen/normal_s"
            android:hint="@string/login_acc" />

        <View
            android:id="@+id/line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/iv_username"
            android:background="#CCCCCC" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_below="@id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_password"/>

        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_username"
            android:layout_below="@id/line"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp">


            <EditText android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingRight="30dp"
                android:singleLine="true"
                android:textColor="@color/font_blue"
                android:textSize="@dimen/normal_s"
                android:hint="@string/login_pwd" />


            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="4dp"
                android:src="@drawable/icon_pwd_show" />
        </FrameLayout>

        <View
            android:id="@+id/line2"
            android:layout_below="@id/iv_password"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_password"
            android:layout_margin="20dp"
            android:background="@color/green_transparent_50"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_x" />


    </RelativeLayout>


</RelativeLayout>